# Time-Tracker-Application

./: README.md
cmpt-370-team-8-Dev/: pom.xml
cmpt-370-team-8-Dev/native-lib/: CMakeLists.txt
cmpt-370-team-8-Dev/native-lib/include/TTJNI/: com_cmpt370_timetracker_JNI.h
cmpt-370-team-8-Dev/native-lib/src/: AppTracking.cpp  Hotkeys.cpp  IdleTime.cpp
cmpt-370-team-8-Dev/src/main/java/: module-info.java
cmpt-370-team-8-Dev/src/main/java/com/cmpt370/: code files shortcut.lnk
cmpt-370-team-8-Dev/src/main/java/com/cmpt370/timetracker/: AppChartController.java  AppTracker.java  DataChangeListener.java  DataSave.java  Day.java  EventLoop.java  HelloApplication.java  HelloController.java  HotkeyEvent.java  HotkeyHandler.java  HotkeySetting.java  HotkeyStartTimerSetting.java  HotkeyStopTimerSetting.java  IdleDetector.java  IdleEvent.java  IdleSetting.java  JNI.java  Model.java  ModelImpl.java  Notification.java  Schedule.java  ScheduledTimeBlock.java  SettingsController.java  TaskDistributionController.java  TaskTracker.java  Timer.java  UpcomingTask.java  timeBlockComparator.java
cmpt-370-team-8-Dev/src/main/resources/com/cmpt370/timetracker/: AppChart.fxml  New-Task.fxml  TaskDistribution.fxml  hello-view.fxml  settings.fxml
